alignment corrections

--- a/style/main.css
+++ b/style/main.css
@@ -55,7 +55,7 @@ a:link {
 }
 
 hr {
-  height: 3px;
+  height: 2px;
   border: 0;
   box-shadow: inset 0 5px 5px -5px rgba(0, 0, 0, 0.5);
 }
@@ -139,6 +139,14 @@ hr {
   .send-money-button {
     font-size: 14px;
   }
+
+  .on-small-screen {
+    display: inline;
+  }
+
+}
+
+@media only screen and (max-width: 768px) {
 
   .on-small-screen {
     display: inline;
