--- a/style/reasons-to-choose-style.css
+++ b/style/reasons-to-choose-style.css
@@ -1,12 +1,13 @@
 .reasons-to-choose {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+
   margin: 0 auto;
 }
 
 .container {
-  margin-top: 50px;
+  margin: 50px 10px 10px 0;
 }
 
 .container .card .icon {
@@ -55,7 +56,7 @@
 .container .card .face.face1 .content i {
   max-width: 100px;
   position: absolute;
-  top: 10%; 
+  top: 10%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: 0.7s;
@@ -102,7 +103,15 @@
 @media only screen and (max-width: 768px) {
 
   .reasons-to-choose {
-    width: 100% !important;
+    display: none;
+  }
+
+  .reasons-to-choose-section-small {
+    display: block;
+    width: 60%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 50px;
   }
 
   .reason {
@@ -119,9 +128,17 @@
 @media only screen and (max-width: 1024px) {
 
   .container .card .face {
-    width: 250px;
+    width: 180px;
     height: 200px;
     transition: 0.5s;
+  }
+
+  .container .card .face.face2 .content p {
+    font-size: 10px;
+  }
+
+  .container .card .face.face1 .content h2 {
+    font-size: 18px;
   }
 
 }
