--- a/style/wu-preferences-section-style.css
+++ b/style/wu-preferences-section-style.css
@@ -36,12 +36,14 @@
 }
 
 @media only screen and (max-width: 768px) {
+  
   .main {
     width: 100%;
     margin: 0 auto;
   }
 
   .wu-preferences-section {
+    display:block;
     width: 100%;
     margin: 0 auto;
     margin-top: 50px;
@@ -49,7 +51,7 @@
 
   .preference {
     margin: 0 auto;
-    width: 300px;
+    width: 60%;
   }
 
   .preference i {
